added source-folder, changed base64 to android ones