@@ -1,16 +1,12 @@
 package at.ac.tuwien.inso.esse.advancedsecsys.client.transfer;
 
-import javax.xml.bind.DatatypeConverter;
-
-
-
 public class Utility
 {
   private static String lf = System.getProperty("line.separator");
 
   public static String b64d(String paramString)
   {
-    String str = new String(DatatypeConverter.printBase64Binary(paramString.getBytes()));
+    String str = new String(Base64.decode(paramString.getBytes(), 0));
     if (str.endsWith(lf))
       str = str.substring(0, str.length() - lf.length());
     return str;
@@ -18,7 +14,7 @@ public class Utility
 
   public static String b64e(String paramString)
   {
-    String str = new String(DatatypeConverter.parseBase64Binary(paramString));
+    String str = new String(Base64.encode(paramString.getBytes(), 0));
     if (str.endsWith(lf))
       str = str.substring(0, str.length() - lf.length());
     return str;
